--- a/FaceTracker/app/src/main/res/layout/viewfacescanner.xml
+++ b/FaceTracker/app/src/main/res/layout/viewfacescanner.xml
@@ -2,22 +2,21 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/topLayout"
+    android:id="@+id/view_ssface_scanner"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
   <com.google.android.gms.samples.vision.face.facetracker.ui.camera.CameraSourcePreview
-      android:id="@+id/preview"
+      android:id="@+id/view_ssface_scanner_preview"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
     <com.google.android.gms.samples.vision.face.facetracker.ui.camera.GraphicOverlay
-        android:id="@+id/faceOverlay"
+        android:id="@+id/view_ssface_scanner_faceOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
   </com.google.android.gms.samples.vision.face.facetracker.ui.camera.CameraSourcePreview>
 
 </LinearLayout>
